# garage-operator

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md  build.rs  flake.nix
.github/workflows/: build_container.yml
charts/: README.md
charts/garage-operator/: Chart.yaml  test.yaml  values.yaml
charts/garage-operator/templates/: deployment.yaml  rbac.yaml
docs/: garage-operator-0.1.0.tgz  garage-operator-0.1.1.tgz  garage-operator-0.1.2.tgz  garage-operator-0.1.3.tgz  garage-operator-0.2.0.tgz  garage-operator-0.2.1.tgz  garage-operator-0.2.2.tgz  index.yaml
spec/: README.md  garage-admin-v0.yml  garage-admin-v1.yml
src/: admin_api.rs  garage_admin.rs  lib.rs  metrics.rs  operator.rs  resources.rs  telemetry.rs
src/reconcilers/: access_key.rs  bucket.rs  garage.rs  mod.rs
src/resources/: access_key.rs  bucket.rs  garage.rs  mod.rs
yaml/: crd.yaml  example.yaml
