[package]
name = "garage_operator"
version = "0.2.1"
authors = ["clux <sszynrae@gmail.com>"]
edition = "2021"
default-run = "operator"
license = "Apache-2.0"
publish = false

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.77"
axum = { version = "0.7.4", default-features = false, features = ["http1", "json", "tokio"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
indoc = "2.0.4"
k8s-openapi = { version = "0.21.0", features = ["v1_27", "schemars"], default-features = false }
kube_quantity = "0.7.1"
lazy_static = "1.4.0"
opentelemetry = { version = "0.19.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tokio"], optional = true }
progenitor-client = "0.3.0"
prometheus = "0.13.3"
reqwest = { version = "0.11.18", features = ["json"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8", optional = true } # 0.9 blocked on opentelemetry-otlp release
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.19.0"
uuid = { version = "1.4.1", features = ["fast-rng", "v4"] }
http = "0.2.9"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.9"
hyper = "0.14.26"
tower-test = "0.4.0"

[build-dependencies]
prettyplease = "0.2.12"
progenitor = "0.3.0"
serde_yaml = "0.9.21"
syn = "2.0.28"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.88.1"
